# pyGREAT

./: .gitignore  404.html  Blader.tsv  Dockerfile  Gastric.tsv  LICENSE  README.md  Spleen.tsv  Tonsil.tsv  download_go_gtf.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  report.html  report_tonsil.html  sitemap.xml  test_report.html
.github/workflows/: ci.yml  docs-pages.yml  release.yml
api/client/: index.html
api/exceptions/: index.html
api/job/: index.html
api/regions/: index.html
api/viz/: index.html
changelog/: index.html
contributing/: index.html
docker/: entrypoint.sh
docs/: changelog.md  contributing.md  index.md  requirements.txt
docs/api/: client.md  exceptions.md  job.md  regions.md  viz.md
docs/examples/: advanced.md  basic.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  results.md  submitting-jobs.md  visualization.md
examples/advanced/: index.html
examples/basic/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/cli/: index.html
guide/results/: index.html
guide/submitting-jobs/: index.html
guide/visualization/: index.html
search/: search_index.json
src/pygreat/: __init__.py  __main__.py
src/pygreat/api/: __init__.py  http.py  parser.py
src/pygreat/cli/: __init__.py  app.py
src/pygreat/core/: __init__.py  client.py  config.py  exceptions.py  job.py
src/pygreat/local/: __init__.py  genes.py  genesets.py  great.py  stats.py
src/pygreat/models/: __init__.py  enrichment.py  regions.py
src/pygreat/report/: __init__.py  assets.py  compare_processor.py  compare_template.py  data_processor.py  generator.py  template.py
src/pygreat/viz/: __init__.py  barplot.py  dotplot.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample.bed  test_genes.gtf  test_go_bp.gmt  test_peaks.bed
tests/integration/: __init__.py  test_api.py  test_cli.py
tests/unit/: __init__.py  test_enrichment.py  test_http.py  test_parser.py  test_regions.py  test_viz.py
